Descibes the type of file

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
 <!-- Own Scripts -->
-<script>
+<script type="text/javascript">
 		//get the current year for the copyright...
 		$('#year').text(new Date().getFullYear());
 
